# FunctorDelegateCXX

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: FastFunctor.hxx  functor.h
src/: Hopter.cpp  HopterUrus.cpp  test.cpp
